<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="code108">Bad Data In Server Response.</string>
    <string name="code599">Connection Problem Please Try Again.</string>
    <string name="code204">No Content Found.</string>
    <string name="code400">Wrong Data.</string>
    <string name="code401">Invalid Username or Password.</string>
    <string name="code404">No Such Request Found.</string>
    <string name="code415">Unsupported File Type.</string>
    <string name="code416">Upload Limit Exceeded.</string>
    <string name="code500">Server Error.</string>
    <string name="code501">Server Error.</string>
    <string name="code701">Username Already Exists.</string>
    <string name="code702">Email Already Exists.</string>
    <string name="code703">Facebook User Not Found.</string>
    <string name="code704">Session Expired.</string>
    <string name="code705">Permission Denied.</string>
    <string name="code706">Restricted Access.</string>
    <string name="code707">Request already exists.</string>
    <string name="code708">Awaiting approval.</string>
    <string name="sdk_error">Opps! Please Upgrade Your IjoomerAdvance SDK.</string>
    <string name="app_name">Intafy</string>

    <string name="app_crash">Application Crashed !!!</string>
    <string name="app_crash_please_send">Please Send </string>
    <string name="app_crash_from_sdcard">From (SDCARD or Internal Memory) Root Directory To Are Developer Team.</string>
    <string name="lat_long_not_found">Latitude-Longitude Not Found</string>
    <string name="address_from_map">Location</string>
    <string name="tap_on_map_get_address">Tap the map to enter location</string>
    <string name="minimum_zoom_level_requires_map_address">Minimum zoom level not reached. Please zoom in and try again. </string>
    <string name="size">Size</string>
    <string name="splash">Splash</string>
    <string name="max_audio_length">Max Audio Length Reached.</string>
    <string name="no_space">No Space Left on Device.</string>
    <string name="send">Send</string>
    <string name="push_to_talk">Hold And Speak</string>
    <string name="dialog_title_select_image">Select Image</string>
    <string name="capture"> Capture</string>
    <string name="gallery"> Gallery</string>
    <string name="saving_image">Saving image</string>
    <string name="preparing_card">Preparing card</string>
    <string name="no_storage_card">No storage card</string>
    <string name="not_enough_space">Not enough space</string>
    <string name="file_exported_successfully">File Exported With This Name %s successfully.</string>


    <string name="intafy_sync_with_server">Syncing with server …</string>
    <string name="intafy_alert_loading">Loading …</string>
    <string name="intafy_lock_app">Lock App?</string>
    <string name="intafy_show_location">Show Location?</string>
    <string name="intafy_english_language">English</string>
    <string name="intafy_german_language">Detuch</string>
    <string name="intafy_french_language">Français</string>
    <string name="intafy_spanish_language">Española</string>
    <string name="intafy_italian_language">Italiano</string>
    <string name="intafy_russian_language">Русскийязык</string>
    <string name="intafy_arabic_language">ةيبرعل</string>
    <string name="intafy_kozuka_language">普通話</string>
    <string name="intafy_portugues_language">Português</string>
    <string name="intafy_nederlands_language">Nederlands</string>
    <string name="intafy_swedish_language">Svenska</string>
    <string name="intafy_norwegian_language">Norsk</string>

    <string name="intafy_text">Text</string>
    <string name="intafy_terms_and_conditions">Terms and Conditions</string>
    <string name="intafy_feed_back">Feedback</string>
    <string name="intafy_rate_app">RateApp</string>
    <string name="intafy_select_language">Select Language</string>
    <string name="intafy_select_users">Select Users</string>
    <string name="intafy_select_circles">Select Circles</string>
    <string name="intafy_please_select_language">Please select one of language&#8230;</string>

    <string name="intafy_validation_value_required">Value Required</string>
    <string name="intafy_validation_invalid_email">Invalid Email</string>
    <string name="intafy_settings">Settings</string>
    <string name="intafy_edit_profile">Edit Profile</string>
    <string name="intafy_edit">Edit</string>
    <string name="intafy_change_photo">Change Photo</string>
    <string name="intafy_take_photo">Take Photo</string>
    <string name="intafy_call_mobile">Call Mobile</string>
    <string name="intafy_call_phone">Call Phone</string>
    <string name="intafy_upload_photo">Upload Photo</string>
    <string name="intafy_my_profile">My Profile</string>
    <string name="intafy_profile">Profile</string>
    <string name="intafy_profile_edited_successfully">Profile edited successfully</string>
    <string name="intafy_networks">Networks</string>
    <string name="intafy_network">Networks</string>
    <string name="intafy_home">Home</string>
    <string name="intafy_loading_sending_request">Sending Request&#8230;</string>
    <string name="intafy_no_network">No network found</string>
    <string name="intafy_networks_added_successfully">Network added successfully</string>
    <string name="intafy_networks_removed_successfully">Network removed successfully</string>
    <string name="intafy_list">List</string>
    <string name="intafy_my">My</string>
    <string name="intafy_all">All</string>
    <string name="intafy_recent">Recent</string>
    <string name="intafy_name">Name</string>
    <string name="intafy_image">Image</string>
    <string name="intafy_map">Map</string>
    <string name="intafy_date">Date</string>
    <string name="intafy_done">Done</string>
    <string name="intafy_directory">Directory</string>
    <string name="intafy_directory_map">Directory Map</string>
    <string name="intafy_from">from</string>
    <string name="intafy_status">Status</string>
    <string name="intafy_add_network">Add Network</string>
    <string name="intafy_add_article">Add Article</string>
    <string name="intafy_edit_article">Edit Article</string>
    <string name="intafy_add_event">Add Event</string>
    <string name="intafy_create_circle">Create Circle</string>
    <string name="intafy_create">Create</string>
    <string name="intafy_folder_name">Folder Name</string>
    <string name="intafy_edit_circle">Edit Circle</string>
    <string name="intafy_edit_event">Edit Event</string>
    <string name="intafy_invite_user_to_event">Invite User to Event</string>
    <string name="intafy_article">Article</string>
    <string name="intafy_article_details">Article Detail</string>
    <string name="intafy_event">Event</string>
    <string name="intafy_messages">Messages</string>
    <string name="intafy_messages_thread">%s Thread</string>
    <string name="intafy_group_thread">%s Thread</string>
    <string name="intafy_send_compose_message">Compose Message</string>
    <string name="intafy_events">Events</string>
    <string name="intafy_event_details">Event Details</string>
    <string name="intafy_event_type_validation">Please select one of event type</string>
    <string name="intafy_send_message_validation">Please select atleast one user</string>
    <string name="intafy_add">Add</string>
    <string name="intafy_add_network_validation">Please add network</string>
    <string name="intafy_audio">Audio</string>
    <string name="intafy_confirm">Confirm</string>
    <string name="intafy_event_attending_people">%s people attending</string>
    <string name="intafy_article_image_is_required">Article image is required …</string>
    <string name="intafy_event_image_is_required">Event image is required …</string>
    <string name="intafy_manage">Manage</string>
    <string name="intafy_social_stream">Social Stream</string>
    <string name="intafy_facebook_social_stream">Facebook Social Stream</string>
    <string name="intafy_twitter_social_stream">Twitter Social Stream</string>
    <string name="intafy_facebook_stream">Facebook Stream</string>
    <string name="intafy_twitter_stream">Twitter Stream</string>
    <string name="intafy_search">Search</string>
    <string name="intafy_new">New</string>
    <string name="intafy_delete">Delete</string>
    <string name="intafy_join">Join</string>
    <string name="intafy_leave">Leave</string>
    <string name="intafy_send">Send</string>
    <string name="intafy_send_mail"> Send mail&#8230;</string>
    <string name="intafy_share_email_no_client">Sorry, no email clients are installed on your device.</string>
    <string name="intafy_yes">Yes</string>
    <string name="intafy_back">Back</string>
    <string name="intafy_cancel">Cancel</string>
    <string name="intafy_circle_member_only_me">Only Me</string>
    <string name="intafy_circle_member">Me and %s others</string>
    <string name="intafy_call">Call</string>
    <string name="intafy_save">Save</string>
    <string name="intafy_block">Block</string>
    <string name="intafy_block_user">Block user</string>
    <string name="intafy_are_you_sure_block_user">Are you sure you want to block this user ?</string>
    <string name="intafy_are_you_sure_leave_event">Are you sure you want to left this event ?</string>
    <string name="intafy_are_you_sure_remove_event">Are you sure you want to remove this event ?</string>
    <string name="intafy_are_you_sure_remove_circle">Are you sure you want to remove this circle ?</string>
    <string name="intafy_are_you_sure_remove_network">Are you sure you want to remove this network ?</string>
    <string name="intafy_are_you_sure_remove_article">Are you sure you want to remove this article ?</string>
    <string name="intafy_are_you_sure_remove_message_thread">Are you sure you want to remove this message thread ?</string>
    <string name="intafy_ok">Ok</string>
    <string name="intafy_no">No</string>
    <string name="intafy_unblock">UnBlock</string>
    <string name="intafy_location_service">Location Services</string>
    <string name="intafy_want_to_enable_location_gps">Would you like to enable GPS ?</string>
    <string name="intafy_want_to_disable_location_gps">Would you like to disable GPS ?</string>
    <string name="intafy_lock_app_validation">Minimum 4 digit password required</string>

    <string name="intafy_first_name">First Name</string>
    <string name="intafy_last_name">Last Name</string>
    <string name="intafy_email">Email</string>
    <string name="intafy_pincode">PinCode</string>
    <string name="intafy_user_name">User Name</string>
    <string name="intafy_users">Users</string>
    <string name="intafy_manage_user">Manage User :</string>
    <string name="intafy_authorisation_code">Authorisation Code</string>

    <string name="intafy_title">Title</string>
    <string name="intafy_to">to</string>
    <string name="intafy_circle_name">Circle name</string>
    <string name="intafy_circle_select_user">Select User</string>
    <string name="intafy_enter_name">Enter name</string>
    <string name="intafy_enter_location">Enter Location</string>
    <string name="intafy_articel_content">Content</string>
    <string name="intafy_event_selection_show_here">Selection shows here</string>
    <string name="intafy_description">Description</string>
    <string name="intafy_individual">Individual</string>
    <string name="intafy_circle">Circle</string>
    <string name="intafy_circles">Circles</string>
    <string name="intafy_circles_join">Join Circles</string>
    <string name="intafy_delete_circle">Delete Circles</string>
    <string name="intafy_public">Public</string>

    <string-array name="intafy_event_type">
        <item>Individual ,Circle or Public?</item>
        <item>Individual</item>
        <item>Circle</item>
        <item>Public</item>
    </string-array>

</resources>